# models/user_role.go
@@ -7,3 +7,9 @@ type UserRole struct {
 	Description string `gorm:"column:description" json:"description"`
 	BaseModel
 }
+
+type UserRoleRequest struct {
+	RoleName    string `gorm:"column:role_name" json:"role_name"`
+	Description string `gorm:"column:description" json:"description"`
+	BaseModel
+}
